--- a/index.html
+++ b/index.html
@@ -31,8 +31,14 @@
         Perfumer-Creator for the House of CHANEL.</p>
 
         <div class="flex__group">
-          <p class="product__price">$149.99</p>
-          <p class="product__original-price"><s>$169.99</s></p>
+          <p class="product__price">
+            <span class="visually-hidden">Current price:</span>
+            $149.99
+          </p>
+          <p class="product__original-price">
+            <span class="visually-hidden">Original price:</span>
+            <s>$169.99</s>
+          </p>
         </div>
 
         <button class="button">Add to Cart</button>
